--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
   "name": "kennan-about",
-  "version": "3.2.2",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "latest",
-    "prop-types": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-native-rename": "^2.3.2",
-    "react-scripts": "latest"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
