appropriate site for resume usage

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "[coming soon]",
-  "name": "[coming soon]",
+  "short_name": "kennan.io",
+  "name": "kennan.io",
   "icons": [
     {
       "src": "favicon.ico",
